versioned_docs/version-1.3.0/colors/utility/hex-string-to-rgb-obj.mdx
---
sidebar_position: 2
description: Convert HEX color as an string to a RGB color as an object
authors: [Shchegortzov Artem Mikhailovich]
tags: [object, hex, color, rgb, string]
keywords: [shegit, rgb, hex, object, color, string]
version: 1.1.0
---

import GitHubResourceButton from '../../../../src/components/mdx/buttons/GitHubResourceButton';
import CodeSandboxResourceButton from '../../../../src/components/mdx/buttons/CodeSandboxResourceButton';
import LiveFunctionPreview from '../../../../src/components/LiveFunctionPreview';
import Versions from '../../../../src/components/mdx/Versions';
import { FUNCTIONS_CONFIG } from '../../../../docs/colors/utility/constants';
import { hexStringToRgbObj } from 'shegit1.3.0';

export const constants = FUNCTIONS_CONFIG['hexStringToRgbObj'];

# hexStringToRgbObj

## Using

Convert HEX color "#`red as 16*` `green as 16*` `blue as 16*`" as an string (`16*` - Hexagonal Calculus)
to a RGB color `{r: red, g: green, b: blue}` as an object.

<LiveFunctionPreview
  name="hexStringToRgbObj"
  func={hexStringToRgbObj}
  args={[{ name: 'obj', initial: '"#14ffb3"', style: { width: 120 } }]}
/>

### Arguments

| Argument | Type                       | Description                   | Example   |
| -------- | -------------------------- | ----------------------------- | --------- |
| `str`    | `string` <br /> `function` | HEX color string or function. | `#f80032` |

### Returns

`object` — Returns RGB color in format `{r: red, g: green, b: blue}` as an string.

### Examples

```js
hexStringToRgbObj('#1200E3');
// { r: 18, g: 0, b: 227 }

hexStringToRgbObj(() => '#401563');
// { r: 64, g: 21, b: 99 }

hexStringToRgbObj(false);
// '#000000'
```

## Resources

<Versions {...constants.versions} />

<div style={{ display: 'flex', gap: 20 }}>
  <GitHubResourceButton linkPath={constants.resourceLinkPath} />
  <CodeSandboxResourceButton link={constants.codeSandboxLink} />
</div>
